<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/start_button"
        android:text="@string/Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="true"
        android:onClick="startBluetooth"
        />

    <Button
        android:id="@+id/search_button"
        android:text="@string/Search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="searchBluetooth"
        />

    <Button
        android:id="@+id/connect_button"
        android:text="@string/Connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="connectBluetooth"
        />

    <Button
        android:id="@+id/discoverSvc_button"
        android:text= "@string/DiscoverServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="discoverServices"
        />

    <Button
        android:id="@+id/disconnect_button"
        android:text="@string/Disconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:enabled="false"
        android:onClick="Disconnect"
        />

    <Switch
        android:id="@+id/led_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/RedLED"
        android:paddingTop="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:switchPadding="12dp"
        android:enabled="false"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_horizontal_margin"
        >

        <TextView
            android:id="@+id/capsense_header"
            android:text="@string/Capsense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingTop="12dp"
            />

        <TextView
            android:id="@+id/capsense_value"
            android:text="@string/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/capsense_header"
            android:paddingTop="12dp"
            />

        <Switch
            android:id="@+id/capsense_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Notify"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:switchPadding="12dp"
            android:enabled="false"
            android:layout_alignParentEnd="true"
            />

    </RelativeLayout>

</LinearLayout>
